Section 1 and VSCode Settings

--- a/Literatur.bib
+++ b/Literatur.bib
@@ -20,6 +20,21 @@
   url         = {https://www.purestorage.com/content/dam/pdf/en/analyst-reports/ar-portworx-pure-storage-2021-kubernetes-adoption-survey.pdf},
 }
 
+@WWW{k8scomp,
+  author = {The Kubernetes Authors},
+  date   = {2021-10-17},
+  title  = {Kubernetes Components},
+  url    = {https://kubernetes.io/docs/concepts/overview/components/},
+}
+
+@Misc{cri-runtime,
+  author    = {The Kubernetes Authors},
+  title     = {Container Runtime Interface (CRI)},
+  subtitle  = {a plugin interface which enables kubelet to use a wide variety of container runtimes.},
+  url       = {https://github.com/kubernetes/cri-api},
+  timestamp = {2022-01-29},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
