Fix Arch Biber and add some text

--- a/Literatur.bib
+++ b/Literatur.bib
@@ -23,16 +23,28 @@
 @WWW{k8scomp,
   author = {The Kubernetes Authors},
   date   = {2021-10-17},
+  editor = {Tim Bannister},
   title  = {Kubernetes Components},
   url    = {https://kubernetes.io/docs/concepts/overview/components/},
 }
 
-@Misc{cri-runtime,
+@WWW{cri-runtime,
   author    = {The Kubernetes Authors},
+  date      = {2022-01-28},
+  editor    = {Tim Bannister},
   title     = {Container Runtime Interface (CRI)},
-  subtitle  = {a plugin interface which enables kubelet to use a wide variety of container runtimes.},
   url       = {https://github.com/kubernetes/cri-api},
+  subtitle  = {a plugin interface which enables kubelet to use a wide variety of container runtimes.},
   timestamp = {2022-01-29},
+}
+
+@WWW{k8sconc,
+  author   = {The Kubernetes Authors},
+  date     = {2020-06-22},
+  editor   = {Tim Bannister},
+  title    = {Kubernetes Concepts},
+  url      = {https://kubernetes.io/docs/concepts/},
+  abstract = {The Concepts section helps you learn about the parts of the Kubernetes system and the abstractions Kubernetes uses to represent your cluster, and helps you obtain a deeper understanding of how Kubernetes works.},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
